tests/e2e/continue_outside.error
Error: syntax error in story at line 1, column 1

1|    continue
      ^^^^^^^^

E0132: `continue` is allowed only inside loops
